# iTools

./: .gitignore  README.md  iTools 开发文档.md  iTools_inno.iss  index.html  package.json  pnpm-lock.yaml
.claude/: settings.local.json
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: logger.rs  main.rs
src-tauri/src/hardware/: sn.rs
src-tauri/src/launcher/: mod.rs
src/components/: SnEditor.svelte  ToolCard.svelte
src/styles/: global.css
